{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 24,
  "lineage": "7811c352-941c-c6f8-50c7-95409213827d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:506495952133:loadbalancer/app/ng-lb-20230303190020213900000002/593233f267a6995f",
            "arn_suffix": "app/ng-lb-20230303190020213900000002/593233f267a6995f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ng-lb-20230303190020213900000002-57805914.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:506495952133:loadbalancer/app/ng-lb-20230303190020213900000002/593233f267a6995f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ng-lb-20230303190020213900000002",
            "name_prefix": "ng-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0793c3180bd89dcf3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00af3c8e025ae079f"
              },
              {
                "subnet_id": "subnet-01782d0a71b0f41db"
              },
              {
                "subnet_id": "subnet-04fe4db7c24f10d4e"
              },
              {
                "subnet_id": "subnet-092b3d54d314ed62c"
              },
              {
                "subnet_id": "subnet-0aabdb8fd19bce3c5"
              },
              {
                "subnet_id": "subnet-0d692b8f512c8930e"
              }
            ],
            "subnets": [
              "subnet-00af3c8e025ae079f",
              "subnet-01782d0a71b0f41db",
              "subnet-04fe4db7c24f10d4e",
              "subnet-092b3d54d314ed62c",
              "subnet-0aabdb8fd19bce3c5",
              "subnet-0d692b8f512c8930e"
            ],
            "vpc_id": "vpc-043c8127da2fb863d",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:506495952133:listener/app/ng-lb-20230303190020213900000002/593233f267a6995f/c41aa34ab210fe69",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:506495952133:targetgroup/ng-tg-20230303190020213400000001/1dec8de4eb0c946c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:506495952133:listener/app/ng-lb-20230303190020213900000002/593233f267a6995f/c41aa34ab210fe69",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:506495952133:loadbalancer/app/ng-lb-20230303190020213900000002/593233f267a6995f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:506495952133:targetgroup/ng-tg-20230303190020213400000001/1dec8de4eb0c946c",
            "arn_suffix": "targetgroup/ng-tg-20230303190020213400000001/1dec8de4eb0c946c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:506495952133:targetgroup/ng-tg-20230303190020213400000001/1dec8de4eb0c946c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ng-tg-20230303190020213400000001",
            "name_prefix": "ng-tg-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-043c8127da2fb863d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506495952133:security-group/sg-0c43134fe041c6d7b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c43134fe041c6d7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-http-sg-20230303190020218100000003",
            "name_prefix": "nginx-http-sg-",
            "owner_id": "506495952133",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043c8127da2fb863d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:506495952133:security-group/sg-0a181c2d1cd8ec4e9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a181c2d1cd8ec4e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx-ssh-sg-20230303190020218700000004",
            "name_prefix": "nginx-ssh-sg-",
            "owner_id": "506495952133",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-043c8127da2fb863d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}